# Ru-texts-normalization-with-triton-inference-server

./: .dockerignore  .gitattributes  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  triton.Dockerfile
notebooks/: solution.ipynb
ru_text_normalization/: __init__.py  model_impl.py  triton.Dockerfile  triton_client.py
ru_text_normalization/constants/: constants.py  vebratim_dict.py
ru_text_normalization/data/: abbreviations.json
ru_text_normalization/engines/decoder/: config.json
ru_text_normalization/engines/encoder/: config.json
ru_text_normalization/model_repository/postprocessing/: config.pbtxt
ru_text_normalization/model_repository/preprocessing/: config.pbtxt
ru_text_normalization/model_repository/tensorrt_llm/: config.pbtxt
ru_text_normalization/model_repository/tensorrt_llm_bls/: config.pbtxt
ru_text_normalization/model_repository/text_normalization/: config.pbtxt
ru_text_normalization/utils/: logger.py  postprocessing.py  preprocessing.py
