[project]
name = "ru_text_normalization"
version = "0.1.0"
description = "Triton server inference for text normalization (convert Russian text from written expressions into spoken forms) before ASR"
authors = [
    {name = "Viktoriya Klyueva",email = "vika_klyueva@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.9,<=3.12.1"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "tritonclient[all] (>=2.57.0,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "transformers (>=4.52.3,<5.0.0)"
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
